# discord-weather-bot

./: Cargo.toml
src/: main.rs  weather.rs
