[package]
name = "discord-weather-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.30.1"
shuttle-runtime = "0.30.1"
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
shuttle-secrets = "0.30.1"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.189"
